--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/input
+/result
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,pycharm
 
