--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-module = wsgi:app
+module = app.wsgi:app
 uid = www-data
 master = true
 processes = 1
@@ -13,3 +13,5 @@ http-port = 5000
 touch-reload = app.py
 
 die-on-term = true
+
+pythonpath = ..
