--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -4,11 +4,10 @@ uid = www-data
 master = true
 processes = 1
 
-socket = /tmp/uwsgi.socket
+socket = :8080
 chmod-sock = 664
 vaccum = true
 enable-threads = true
-http-port = 5000
 
 touch-reload = app.py
 
