buffer size modified

--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -4,7 +4,8 @@ uid = www-data
 master = true
 processes = 1
 
-socket = :8080
+buffer-size=32768
+http = :8080
 chmod-sock = 664
 vaccum = true
 enable-threads = true
